tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/key/duplicate.stderr
TOML parse error at line 3, column 1
  |
3 | name = "Pradyun"
  | ^
duplicate key `name` in document root
